--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     background-color: #B0E0E6;
     margin-left: 05%;
     margin-right: 05%;
-    font-family: Arial, Helvetica, sans- serif
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 p {
