--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
 body {
-    margin-top: 05%;
     background-color: #B0E0E6;
-    margin-left: 05%;
-    margin-right: 05%;
+    margin-left: 02%;
+    margin-right: 02%;
+    margin-bottom:02;
+    margin-top: 02%;
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;  
 }
 
 p {
@@ -13,4 +15,26 @@ p {
 
 em strong {
     color: #080808;
+}
+
+h1{
+    text-align: justify;
+    font-size: 40px;  
+    background-color: #1313a3;
+    padding: 3px;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    color: #16d3f5;
+    text-align: center;
+}
+
+#horário {
+    color: #5b557c;
+    font-size: 30px; 
+    text-align: justify;  
+}
+.imagem 1{
+    
 }
